--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ notifications:
             - "https://scalar.vector.im/api/neb/services/hooks/dHJhdmlzLWNpLyU0MGdvbGFuJTNBbm90cmVhbGx5Lm9yZy8lMjFpdnBobXpIQ1BTR0RhdHByT0wlM0Fub3RyZWFsbHkub3Jn"
         on_success: change  # always|never|change
         on_failure: always
-        on_start: always
+        on_start: never
